--- a/umad/index.html
+++ b/umad/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Fast Sparse View Guided NeRF Update for Object Reconfigurations.">
-  <meta name="keywords" content="NeRF, update">
+        content="UMAD: University of Macau Anomaly Detection Benchmark Dataset.">
+  <meta name="keywords" content="Anomaly Detection, Change Detection">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fast Sparse View Guided NeRF Update for Object Reconfigurations</title>
+  <title>UMAD: University of Macau Anomaly Detection Benchmark Dataset</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -89,32 +89,22 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Fast Sparse View Guided <span style="color: #FF5733;">NeRF Update</span> for Object Reconfigurations</h1>
+          <h1 class="title is-1 publication-title"> <span style="color: #FF5733;">UMAD</span>: University of Macau Anomaly Detection Benchmark Dataset</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://520xyxyzq.github.io">Ziqi Lu</a><sup>1</sup>,</span>
+              <a href="https://doongli.github.io">Dong Li</a>,</span>
             <span class="author-block">
-              <a href="http://www.jianboye.org">Jianbo Ye</a><sup>2</sup>,</span>
+              <a href="https://scholar.google.com/citations?hl=en&user=Fg01Yv0AAAAJ">Lineng Chen</a>,</span>
             <span class="author-block">
-              <a href="https://feixh.github.io">Xiaohan Fei</a><sup>2</sup>,
+              <a href="https://scholar.google.com/citations?user=XsBBTUgAAAAJ&hl=en">Cheng-Zhong Xu</a>,
             </span>
             <span class="author-block">
-              <a href="https://dragonlong.github.io">Xiaolong Li</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://jiawei-mo.github.io">Jiawei Mo</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=3CEGNJQAAAAJ&hl=en">Ashwin Swaminathan</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://web.cs.ucla.edu/~soatto/">Stefano Soatto</a><sup>2</sup>
+              <a href="https://scholar.google.com/citations?user=Glqv2ooAAAAJ&hl=en&oi=ao">Hui Kong</a>,
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>MIT</span>
-            <span class="author-block"><sup>2</sup>Amazon AWS AI Labs</span>
+            <span class="author-block">University of Macau</span>
           </div>
           <div class="column has-text-centered">
             <div class="publication-links">
