--- a/umad/index.html
+++ b/umad/index.html
@@ -3,30 +3,46 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="BALF: Simple and Efficient Blur Aware Local Feature Detector">
-  <meta name="keywords" content="BALF">
+        content="UMAD: University of Macau Anomaly Detection Benchmark Dataset.">
+  <meta name="keywords" content="Anomaly Detection, Change Detection">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BALF</title>
+  <title>UMAD: University of Macau Anomaly Detection Benchmark Dataset</title>
 
-<link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-PYVRSFMDRL');
+  </script>
+
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
 
-  <link rel="stylesheet" href="./media/balf/css/bulma.min.css">
-  <link rel="stylesheet" href="./media/balf/css/bulma-carousel.min.css">
-  <link rel="stylesheet" href="./media/balf/css/bulma-slider.min.css">
-  <link rel="stylesheet" href="./media/balf/css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="./static/css/bulma.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-  <link rel="stylesheet" href="./media/balf/css/index.css">
+  <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="icon" href="./static/images/favicon.svg">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="./media/balf/js/fontawesome.all.min.js"></script>
-  <script src="./media/balf/js/bulma-carousel.min.js"></script>
-  <script src="./media/balf/js/bulma-slider.min.js"></script>
-  <script src="./media/balf/js/index.js"></script>
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script src="./static/js/bulma-carousel.min.js"></script>
+  <script src="./static/js/bulma-slider.min.js"></script>
+  <script src="./static/js/index.js"></script>
 </head>
 <body>
 
+<!--
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
@@ -37,7 +53,7 @@
   </div>
   <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://ericzzj1989.github.io/">
+      <a class="navbar-item" href="https://keunhong.com">
       <span class="icon">
           <i class="fas fa-home"></i>
       </span>
@@ -47,50 +63,55 @@
         <a class="navbar-link">
           More Research
         </a>
-        <!-- <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://pengsongyou.github.io/conv_onet">
-            ConvONet - ECCV 2020
+        <div class="navbar-dropdown">
+          <a class="navbar-item" href="https://hypernerf.github.io">
+            HyperNeRF
           </a>
-          <a class="navbar-item" href="https://pengsongyou.github.io/sap">
-            Shapt As Points - NeurIPS 2021
+          <a class="navbar-item" href="https://nerfies.github.io">
+            Nerfies
           </a>
-        </div> -->
+          <a class="navbar-item" href="https://latentfusion.github.io">
+            LatentFusion
+          </a>
+          <a class="navbar-item" href="https://photoshape.github.io">
+            PhotoShape
+          </a>
+        </div>
       </div>
     </div>
 
   </div>
 </nav>
-
+-->
 
 <section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
-        <!-- <div class="column is-7 has-text-centered">
-          <img src="media/nice-slam/nice-slam-logo2.png" alt="NICE-SLAM"/>
-        </div> -->
-      <!-- </div> -->
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">BALF</h1>
-          <h1 class="title is-2 publication-title" style="white-space: nowrap;">Simple and Efficient Blur Aware Local Feature Detector</h1>
-          <div class="column is-full_width">
-            <h2 class="title is-4">WACV 2024</h2>
-          </div>
-          <!-- <br> -->
+          <h1 class="title is-1 publication-title"> <span style="color: #FF5733;">UMAD</span>: University of Macau Anomaly Detection Benchmark Dataset</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://ericzzj1989.github.io/">Zhenjun Zhao</a></span>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://doongli.github.io">Dong Li</a>,</span>
+            <span class="author-block">
+              <a href="https://scholar.google.com/citations?hl=en&user=Fg01Yv0AAAAJ">Lineng Chen</a>,</span>
+            <span class="author-block">
+              <a href="https://scholar.google.com/citations?user=XsBBTUgAAAAJ&hl=en">Cheng-Zhong Xu</a>,
+            </span>
+            <span class="author-block">
+              <a href="https://scholar.google.com/citations?user=Glqv2ooAAAAJ&hl=en&oi=ao">Hui Kong</a>,
+            </span>
           </div>
 
           <div class="is-size-5 publication-author">
-            <span class="author-block">The Chinese University of Hong Kong</span>&nbsp;&nbsp;
+            <span class="author-block">University of Macau</span>&nbsp;&nbsp;
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <!-- <span class="link-block">
-                <a href="https://arxiv.org/abs/2106.03452"
+                <a href="https://doongli.github.io/umad/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -99,19 +120,19 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2211.14731" target="_blank"
+                <a href="https://doongli.github.io/umad/" target="_blank"
                    class="button is-normal is-rounded is-dark">
-                <!-- <a href="https://arxiv.org/abs/2112.12130" target="_blank"
+                <!-- <a href="https://doongli.github.io/umad/" target="_blank"
                    class="button is-normal is-rounded is-dark"> -->
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>Paper (TODO)</span>
                 </a>
               </span>
               <!-- Poster Link. -->
               <span class="link-block">
-                <a href="media/balf/poster_balf.pdf"
+                <a href="https://doongli.github.io/umad/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-palette"></i>
@@ -121,7 +142,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://youtu.be/pSn80SS9mTM?si=fJPbDiHtIMrqiqSV"
+                <a href="https://www.youtube.com/watch?v=xORb4H-AyNw"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -131,7 +152,7 @@
               </span>
               <!-- Code Link. -->
                <span class="link-block">
-                <a href="https://github.com/ericzzj1989/BALF" target="_blank"
+                <a href="https://github.com/IMRL/UMAD" target="_blank"
 		   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -147,6 +168,7 @@
     </div>
   </div>
 </section>
+
 
 <section class="hero teaser">
   <div class="container is-max-desktop">
