--- a/umad/index.html
+++ b/umad/index.html
@@ -130,16 +130,6 @@
                   <span>Paper (TODO)</span>
                 </a>
               </span>
-              <!-- Poster Link. -->
-              <span class="link-block">
-                <a href="https://doongli.github.io/umad/"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-palette"></i>
-                  </span>
-                  <span>Poster</span>
-                  </a>
-              </span>
               <!-- Video Link. -->
               <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=xORb4H-AyNw"
@@ -157,7 +147,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span >Code (TODO)</span>
+                  <span >Code</span>
                   </a>
               </span> 
             </div>
@@ -195,8 +185,8 @@
             <hr>
             <h2 class="title is-3">Video</h2>
             <div class="publication-video">
-              <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/pSn80SS9mTM?si=iqCQeYO0QJYZ_o7u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
-              <iframe src="https://www.youtube.com/embed/pSn80SS9mTM?si=iqCQeYO0QJYZ_o7u"
+              <!-- <iframe width="560" height="315" src="https://www.youtube.com/watch?v=xORb4H-AyNw&t=1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+              <iframe src="https://www.youtube.com/watch?v=xORb4H-AyNw&t=1s"
                       frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             
             </div>
