--- a/umad/index.html
+++ b/umad/index.html
@@ -163,7 +163,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img class="rounded" src="./images/6.jpg" >
+      <img class="rounded" src="/images/6.jpg" >
       <br><br><br>
       <h2 class="subtitle has-text-centered">
       <strong>UMAD</strong> is a large-scale reference-based anomaly detection benchmark dataset that captures real-world scenarios. UMAD consists of 6 distinct scenes, 120 sequences, 26k image pairs, and a comprehensive set of 140k object annotation labels.
@@ -224,16 +224,17 @@
       month     = {January},
       year      = {2024},
       pages     = {3362-3372}
+       }
       </p> -->
       TODO
-  }</code></pre>
+ </code></pre>
   </div>
 </section>
 
 <section class="section" id="Acknowledgements">
   <div class="container is-max-desktop content">
     <h2 class="title">Acknowledgements</h2>
-    The author thanks <a href="https://ethliup.github.io/">Peidong Liu</a> and <a href="http://www.mae.cuhk.edu.hk/~bmchen">Ben M. Chen</a> for supporting.
+        The author thanks Xiangyu Qin, Kaijie Yin, Shenbo Wang, Shuhao Zhai, Beibei Zhou, Xiaonao Li, Hongzhi Cheng for their data annotation.
   </div>
 </section>
 
