--- a/umad/index.html
+++ b/umad/index.html
@@ -186,8 +186,8 @@
             <hr>
             <h2 class="title is-3">Video</h2>
             <div class="publication-video">
-              <!-- <iframe width="560" height="315" src="https://www.youtube.com/watch?v=xORb4H-AyNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
-              <iframe src="https://www.youtube.com/watch?v=xORb4H-AyNw"
+              <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/xORb4H-AyNw?si=4nLvrwCud_OTXagU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+              <iframe src="https://www.youtube.com/embed/xORb4H-AyNw?si=4nLvrwCud_OTXagU"
                       frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             
             </div>
