--- a/umad/index.html
+++ b/umad/index.html
@@ -99,7 +99,7 @@
               <a href="https://scholar.google.com/citations?user=XsBBTUgAAAAJ&hl=en">Cheng-Zhong Xu</a>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=Glqv2ooAAAAJ&hl=en&oi=ao">Hui Kong</a>,
+              <a href="https://scholar.google.com/citations?user=Glqv2ooAAAAJ&hl=en&oi=ao">Hui Kong</a>
             </span>
           </div>
 
