--- a/umad/index.html
+++ b/umad/index.html
@@ -127,7 +127,7 @@
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper (TODO)</span>
+                  <a href="https://arxiv.org/pdf/2408.12527" target="_blank"><span>Paper</span></a>
                 </a>
               </span>
               <!-- Video Link. -->
@@ -216,18 +216,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>
-      <!--@InProceedings{Zhao_2024_WACV,
-      author    = {Zhao, Zhenjun},
-      title     = {BALF: Simple and Efficient Blur Aware Local Feature Detector},
-      booktitle = {Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
-      month     = {January},
-      year      = {2024},
-      pages     = {3362-3372}
-       }
-      </p> -->
-      TODO
- </code></pre>
+	<pre><code>
+      		<!--@article{li2024umad,
+      		title={UMAD: University of Macau Anomaly Detection Benchmark Dataset},
+      		author={Li, Dong and Chen, Lineng and Xu, Cheng-Zhong and Kong, Hui},
+      		journal={arXiv preprint arXiv:2408.12527},
+      		year={2024}
+      		} -->
+	</code></pre>
   </div>
 </section>
 
