--- a/umad/index.html
+++ b/umad/index.html
@@ -120,14 +120,14 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="https://doongli.github.io/umad/" target="_blank"
+                <a href="https://arxiv.org/pdf/2408.12527" target="_blank"
                    class="button is-normal is-rounded is-dark">
                 <!-- <a href="https://doongli.github.io/umad/" target="_blank"
                    class="button is-normal is-rounded is-dark"> -->
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <a href="https://arxiv.org/pdf/2408.12527" target="_blank"><span>Paper</span></a>
+                  <span>Paper</span></a>
                 </a>
               </span>
               <!-- Video Link. -->
@@ -216,14 +216,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-	<pre><code>
-      		<!--@article{li2024umad,
-      		title={UMAD: University of Macau Anomaly Detection Benchmark Dataset},
-      		author={Li, Dong and Chen, Lineng and Xu, Cheng-Zhong and Kong, Hui},
-      		journal={arXiv preprint arXiv:2408.12527},
-      		year={2024}
-      		} -->
-	</code></pre>
+    <pre><code>
+      @article{li2024umad,
+      title={UMAD: University of Macau Anomaly Detection Benchmark Dataset},
+      author={Li, Dong and Chen, Lineng and Xu, Cheng-Zhong and Kong, Hui},
+      journal={arXiv preprint arXiv:2408.12527},
+      year={2024}
+      }
+    </code></pre>
   </div>
 </section>
 
