--- a/umad/index.html
+++ b/umad/index.html
@@ -217,12 +217,14 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      @article{li2024umad,
-      title={UMAD: University of Macau Anomaly Detection Benchmark Dataset},
-      author={Li, Dong and Chen, Lineng and Xu, Cheng-Zhong and Kong, Hui},
-      journal={arXiv preprint arXiv:2408.12527},
-      year={2024}
-      }
+	@inproceedings{li2024umad,
+	  title={UMAD: University of Macau Anomaly Detection Benchmark Dataset},
+	  author={Li, Dong and Chen, Lineng and Xu, Cheng-Zhong and Kong, Hui},
+	  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+	  pages={5836--5843},
+	  year={2024},
+	  organization={IEEE}
+	}
     </code></pre>
   </div>
 </section>
